# sonix-keyboard-bootloader

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: auto_build.yml
CMSIS/: SN32F240B.h  system_SN32F240B.h
src/: config.h  main.c
